<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RPS Duel</string>
    <string name="action_practice">Practice</string>
    <string name="action_duel">Duel</string>
    <string name="action_stats">Stats</string>
    <string name="action_settings">Settings</string>
    <string name="enterNameHint">enter your name</string>
    <string name="enterNameMessage">What should I call you?</string>
    <string name="welcome">Welcome to RPS Duel!</string>
    <string name="playMessage">Let\'s Play!</string>

</resources>
