<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:rps="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.danylnysom.rpsduel.RPSActivity">

    <item
        android:id="@+id/action_practice"
        android:orderInCategory="1"
        android:title="@string/action_practice"
        rps:showAsAction="always" />

    <item
        android:id="@+id/action_duel"
        android:orderInCategory="2"
        android:title="@string/action_duel"
        rps:showAsAction="always" />

    <item
        android:id="@+id/action_stats"
        android:orderInCategory="3"
        android:title="@string/action_stats"
        rps:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="4"
        android:title="@string/action_settings"
        rps:showAsAction="never" />
</menu>
