<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/name_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:capitalize="words"
        android:gravity="center"
        android:hint="@string/enterNameHint"
        android:imeOptions="actionDone"
        android:singleLine="true" />

    <TextView
        android:id="@+id/name_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/name_box"
        android:gravity="center"
        android:text="@string/enterNameMessage"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/name_message"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/welcome"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_box"
        android:layout_centerInParent="true"
        android:enabled="false"
        android:text="@string/playMessage" />
</RelativeLayout>